<resources>
    <string name="app_description" translatable="false">This App will allow you to scan your HRD diamond and its unique QR code, and immediately see the certification of your stone and the video message inside.</string>
    <string name="app_shrt_description" translatable="false">Scan the QR code on your Diamond blister and access the certificate of the diamond. Store a video of your most precious memory to last forever with you.</string>
    <string name="app_name">Hrd Memory</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>


    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main" translatable="false">Ocr Detector Sample</string>
    <string name="ocr_header" translatable="false">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text" translatable="false">Detect Text</string>
    <string name="auto_focus" translatable="false">Auto Focus</string>
    <string name="use_flash" translatable="false">Use Flash</string>
    <string name="ocr_success" translatable="false">Text read successfully</string>
    <string name="ocr_failure" translatable="false">No text captured</string>
    <string name="ocr_error" translatable="false">"Error reading text: %1$s"</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="scan">Scan</string>
    <string name="hrd_antwerp">HRD Antwerp</string>
    <string name="immagine" translatable="false">immagine</string>
    <string name="immdia" translatable="false">immDia</string>


    <string name="todo" translatable="false">TODO</string>
    <string name="button" translatable="false">X
    </string>
    <string name="hrd_antwerp_123456789012" translatable="false">HRD Antwerp 123456789012</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="swi">Switch</string>
    <string name="video_memory_box">Video Memory Box</string>
    <string name="choose_video">Choose Video</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="i_agree_with_terms_and_conditions">I agree with terms and conditions</string>
    <string name="upload_video">Upload Video</string>
    <string name="watch_movie">watch movie</string>
    <string name="download_pdf">download PDF</string>
    <string name="upload_string_choose_video">upload @string/choose_video</string>
    <string name="upload_string_watch_movie">upload movie</string>
    <string name="send_request">Send Request</string>
    <string name="back">back</string>
    <string name="characteristics">Characteristics</string>
    <string name="natural_diamond">Natural Diamond</string>
    <string name="place_the_inscription_in_front_at_the_camera">Place the inscription in front at the camera</string>
    <string name="upload_in_progress">Upload in progress</string>
    <string name="noServices">Your device does not support scan mode, please enter the HRD code manually</string>
    <string name="Insert_the_HRD_code">Insert the HRD code</string>
    <string name="cancel">Cancel</string>
    <string name="Video_not_present">Video not present</string>
    <string name="Video_present">Video already present</string>
    <string name="cancel_video">Do you want upload a new video? The old video will be deleted.</string>
    <string name="cancel_code">Are you sure to remove the code from favorite?</string>
    <string name="cancel_favorites">Remove the code from favorites</string>
    <string name="ok_proceed">OK, proceed</string>
    <string name="Please_insert_your_name">Please insert your name</string>
    <string name="Please_insert_a_valid_email">Please insert a valid email</string>
    <string name="Please_choose_a_video">Please choose a video</string>
    <string name="Please_agree_with_terms_and_conditions">Please agree with terms and conditions</string>
    <string name="Upload_completed">Upload completed</string>
    <string name="Upload_message">Your video has been uploaded. Check your email for confirmation</string>
    <string name="Upload_message2">Your video has been uploaded, video processing will take few minutes. Check your email for confirmation</string>
    <string name="skipString">SKIP</string>
    <string name="tut0">The first diamond with your video message</string>
    <string name="tut1">Download and open\n the HRD memory app</string>
    <string name="tut2">Scan the the number and the QR code of your diamond</string>
    <string name="tut3">Open the PDF to visualize the HRD certificate</string>
    <string name="tut4">Tap on \'Upload Movie\' and\n register your credentials</string>
    <string name="tut5">Agree the HRD Video Memory Box and Privacy policy</string>
    <string name="tut6">Choose your video\n from the gallery or camera</string>
    <string name="tut7">Upload the movie tapping on \'Upload Movie\'</string>
    <string name="tut8">The video is immediately uploaded</string>
    <string name="tut9">You will receive an email of confirmation\n in a few minutes with the video compressed for your HRD Video Memory Box</string>
    <string name="tut10">Connect the HRD Video Memory Box with your computer</string>
    <string name="tut11">Drag the video file in your HRD Video Memory Box folder</string>
    <string name="tut12">The video now is saved and ready to play</string>
    <string name="favorites">Favorites</string>

    <string name="cancella">Code removed</string>


</resources>
